# egui-tabbed-document-ui-example

./: Cargo.toml  README.md  index.html
assets/: sw.js
assets/translations/: en-US.ftl
src/: app.rs  context.rs  file_picker.rs  fonts.rs  i18n.rs  lib.rs  main.rs
src/app/: tabs.rs
src/app/app_tabs/: document.rs  home.rs  mod.rs  new.rs
src/documents/: image.rs  loader.rs  mod.rs  text.rs
